# tencent-cloud-iotsuite-embedded-c

./: .gitignore  .gitmodules  .travis.yml  CHANGELOG.md  CMakeLists.txt  Doxyfile  README.md
doc/: sdk-export.md  troubleshooting.md
doc/html/: dir_000000_000003.html  dir_0d3828895224ab6d23844886dc9f942e_dep.md5  dir_ac186d3e8926949364e5821f25491cc3.html  dir_ac186d3e8926949364e5821f25491cc3_dep.map  dir_d44c64559bbebec7f509842c48db8b23.html  files.html  globals.html  globals_c.html  globals_defs.html  globals_enum.html  globals_eval.html  globals_func.html  globals_g.html  globals_h.html  globals_l.html  globals_m.html  globals_s.html  globals_t.html  globals_type.html  graph_legend.html  index.html  struct__tc__iot__device__info.html  struct__tc__iot__hmac__sha256__t__coll__graph.map  struct__tc__iot__hmac__sha256__t__coll__graph.md5  struct__tc__iot__http__request.html  struct__tc__iot__http__request__coll__graph.md5  struct__tc__iot__message__data__coll__graph.map  struct__tc__iot__message__data__coll__graph.md5  struct__tc__iot__mqtt__client__coll__graph.map  struct__tc__iot__mqtt__client__config.html  struct__tc__iot__mqtt__message.html  struct__tc__iot__property.html  struct__tc__iot__shadow__client__coll__graph.map  struct__tc__iot__shadow__client__coll__graph.md5  struct__tc__iot__yabuffer__t.html  structtc__iot__net__context__t.html  structtc__iot__timer.html  tc__iot__base64_8h.html  tc__iot__base64_8h__dep__incl.md5  tc__iot__certs_8h__dep__incl.md5  (+50 more)
docs/: file_desc.md  flush_doc.sh  sdk-export.md  troubleshooting.md
docs/html/: annotated.html  dir_000000_000002.html  dir_0966d06610f72609fd9aa4979c2b5a92.html  dir_0d3828895224ab6d23844886dc9f942e.html  dir_ac186d3e8926949364e5821f25491cc3_dep.md5  dir_d44c64559bbebec7f509842c48db8b23_dep.map  dir_d44c64559bbebec7f509842c48db8b23_dep.md5  functions_vars.html  globals_d.html  globals_i.html  globals_u.html  globals_vars.html  md_README.html  pages.html  struct__tc__iot__hmac__sha256__t.html  struct__tc__iot__http__request__coll__graph.map  struct__tc__iot__message__data.html  struct__tc__iot__mqtt__client.html  struct__tc__iot__mqtt__client__coll__graph.md5  struct__tc__iot__mqtt__client__config__coll__graph.map  struct__tc__iot__mqtt__client__config__coll__graph.md5  struct__tc__iot__mqtt__connack__data.html  struct__tc__iot__property__coll__graph.map  struct__tc__iot__property__coll__graph.md5  struct__tc__iot__sha256__t.html  struct__tc__iot__shadow__client.html  struct__tc__iot__shadow__config.html  struct__tc__iot__shadow__config__coll__graph.map  struct__tc__iot__shadow__config__coll__graph.md5  structtc__iot__network__t.html  tc__iot__base64_8h_source.html  (+43 more)
examples/: CMakeLists.txt
examples/basic_editon/mqtt/: CMakeLists.txt  README.md  demo_custom_topic.c  demo_mqtt.c  iot-product.json  tc_iot_device_config.h
examples/linux/: CMakeLists.txt  README.md  demo_custom_topic.c  demo_mqtt.c  demo_shadow.c  tc_iot_client_config_opts.c  tc_iot_device_config.h
examples/linux/app/: CMakeLists.txt  README.md  app_main.c  iot-product.json  tc_iot_device_config.h  tc_iot_device_logic.c  tc_iot_device_logic.h
examples/linux/coap/: CMakeLists.txt  README.md  coap_app_main.c  tc_iot_coap_config_opts.c  tc_iot_coap_device_config.h
examples/linux/http/: README.md  http_rpc_main.c  tc_iot_http_client_config_opts.c  tc_iot_http_config.h
examples/linux/light/: CMakeLists.txt  README.md  app_main.c  device_config.json  iot-product.json  light_device.c  tc_iot_demo_light.h  tc_iot_device_config.h  tc_iot_device_logic.c  tc_iot_device_logic.h  tc_iot_shadow_local_data.h  tc_iot_shadow_property.c  tc_iot_shadow_property_common.c  template.json
examples/linux/ota/: CMakeLists.txt  README.md  app_main.c  tc_iot_ota_logic.c  tc_iot_ota_logic.h
examples/linux/smartbox/: CMakeLists.txt  README.md  app_main.c  tc_iot_device_config.h
include/: tc_iot_compile_flags.h  tc_iot_compile_flags.h.in  tc_iot_config.h  tc_iot_config.h.in  tc_iot_export.h  tc_iot_external.h  tc_iot_inc.h
samples/linux/mqtt/: CMakeLists.txt  demo_auth_mqtt_client.c  simple_mqtt_client.c  tc_iot_device_config.h
samples/linux/shadow/: CMakeLists.txt  demo_shadow.c
src/: CMakeLists.txt
src/coap/: CMakeLists.txt  tc_iot_coap.c  tc_iot_coap_code_map.c
src/common/: CMakeLists.txt  tc_iot_base64.c  tc_iot_certs.c  tc_iot_hmac.c  tc_iot_http_utils.c  tc_iot_json.c  tc_iot_log.c  tc_iot_md5.c  tc_iot_sign_utils.c  tc_iot_string_utils.c  tc_iot_url.c  tc_iot_ya_buffer.c
src/http/: CMakeLists.txt  tc_iot_active_device.c  tc_iot_http_mqapi.c  tc_iot_token.c
src/iotsuite/: CMakeLists.txt  tc_iot_certs.c  tc_iot_client.c  tc_iot_mqtt.c  tc_iot_shadow.c  tc_iot_shadow_property.c  tc_iot_token.c
src/mqtt/: CMakeLists.txt  tc_iot_mqtt.c
src/ota/: CMakeLists.txt  tc_iot_ota_download.c  tc_iot_ota_mqtt.c
src/platform/: CMakeLists.txt
src/platform/generic/: CMakeLists.txt  tc_iot_hal_dtls.c  tc_iot_hal_net.c  tc_iot_hal_os.c  tc_iot_hal_timer.c  tc_iot_hal_tls.c  tc_iot_hal_udp.c  tc_iot_hal_util.c
src/platform/linux/: CMakeLists.txt  tc_iot_hal_dtls.c  tc_iot_hal_net.c  tc_iot_hal_os.c  tc_iot_hal_timer.c  tc_iot_hal_tls.c  tc_iot_hal_udp.c  tc_iot_hal_util.c
src/token/: CMakeLists.txt
tests/: CMakeLists.txt  tc_iot_test_base64.c  tc_iot_test_base64.cpp  tc_iot_test_bit.c  tc_iot_test_json.c  tc_iot_test_json.cpp  tc_iot_test_runner.c  tc_iot_test_runner.cpp  tc_iot_test_ya_buffer.c  tc_iot_test_ya_buffer.cpp  tc_iot_unit_test.h
tests/gtest/: CMakeLists.txt  tc_iot_device_config.h  tc_iot_http_test.cpp  tc_iot_mqtt_test.cpp
tests/gtest/data_template/: demo_shadow.c  tc_iot_device_config.h  tc_iot_device_logic.c  tc_iot_device_logic.cpp  tc_iot_mqapi_test.cpp  tc_iot_shadow_test.cpp  tc_iot_suite_test.cpp
tests/st/: st_coap.c  st_download.c  st_hmac.c  st_http_mqapi.c  st_md5.c  st_udp_client.c
tools/: app.sh  armcc-compile-check.bat  configure.sh  custom.sh  demo_mqtt.sh  iotsuite_cli.py  light.sh  light_controller.sh  light_device.sh  mqtt.sh  mqttcmd_gen.py  reconfigure.sh  shadow.sh  tc_iot_code_generator.py  tc_iot_shadow_cli.py
(+601 files in other folders)
