
ADD_SUBDIRECTORY(common)
ADD_SUBDIRECTORY(platform)
ADD_SUBDIRECTORY(http)

if (ENABLE_DATA_TEMPLATE)
    ADD_SUBDIRECTORY(iotsuite)
endif()

if (ENABLE_MQTT)
    ADD_SUBDIRECTORY(mqtt)
endif()

if (ENABLE_COAP)
    ADD_SUBDIRECTORY(coap)
endif()

if (ENABLE_OTA)
    ADD_SUBDIRECTORY(ota)
endif()

