add_executable(demo_shadow demo_shadow.c)
if(ENABLE_TLS)
    target_link_libraries(demo_shadow tc_iot_suite tc_iot_common tc_iot_hal mbedtls jsmn MQTTPacketClient)
else()
    target_link_libraries(demo_shadow tc_iot_suite tc_iot_common tc_iot_hal jsmn MQTTPacketClient)
endif()

# add_executable(demo_tls_shadow demo_tls_shadow.c)
# if(ENABLE_TLS)
    # target_link_libraries(demo_tls_shadow tc_iot_suite tc_iot_common tc_iot_hal mbedtls jsmn MQTTPacketClient)
# else()
    # target_link_libraries(demo_tls_shadow tc_iot_suite tc_iot_common tc_iot_hal jsmn MQTTPacketClient)
# endif()
